--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
 set -s escape-time 0
-set-option -g history-limit 5000
+set-option -g history-limit 50000
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 #set -g mouse on
